# mumble

./: .gitmodules  install-mumble.sh  mumble_settings.json  setup-mumble.py
plugins/: CMakeLists.txt  MumblePlugin.h
plugins/voiceCapture/: CMakeLists.txt  build.py  log.hpp  manager.cpp  manager.hpp  plugin.cpp  recordingProcessor.cpp  recordingProcessor.hpp  socket.cpp  socket.hpp  userData.hpp  voiceCapture.cpp
src/mumble/: API.h  API_v_1_x_x.cpp  MainWindow.ui  VoiceRecorder.cpp  VoiceRecorder.h  VoiceRecorderDialog.cpp
